--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(untitled1 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(untitled1 main.c)
+add_executable(untitled1 main.c
+        libs/data_structures/vector/vector.h)
 
 add_subdirectory(libs)
 target_link_libraries(untitled1 data_structures)
