--- a/libs/data_structures/CMakeLists.txt
+++ b/libs/data_structures/CMakeLists.txt
@@ -3,4 +3,5 @@ add_library(data_structures
         vector/vector.c
         matrix/matrix.c
         matrix/matrix.h
+        matrix/test.matrix.c
 )
