--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ project(untitled1 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(untitled1 main.c
-        libs/data_structures/vector/vector.h)
+        libs/data_structures/vector/vector.h
+        libs/algorithms/array/array.c
+        libs/algorithms/array/array.h
+        libs/algorithms/algorithm.c
+        libs/algorithms/algorithm.h)
 
 add_subdirectory(libs)
 target_link_libraries(untitled1 data_structures)
